--- a/nexus9k/templates/article.html
+++ b/nexus9k/templates/article.html
@@ -134,7 +134,7 @@
             <div class="panel panel-default panel-transparent">
               <div class="panel-heading">RELATED ARTICLES</div>
               <div class="panel-body">
-                <div class="list-group">
+                <div class="list-group list-group-transparent">
 
               <span class="list-group-item">
                 <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="40"
