--- a/nexus9k/templates/articles.html
+++ b/nexus9k/templates/articles.html
@@ -85,7 +85,7 @@
             <div class="panel panel-default panel-transparent">
               <div class="panel-heading">Recent Activity</div>
               <div class="panel-body">
-                <div class="list-group">
+                <div class="list-group list-group-transparent">
           <span class="list-group-item">
             <h5 class="list-group-item-heading">
               <a href="#">Lori MacVittie</a> commented on <a href="#">Converting NXOS Standalone</a>:
