--- a/nexus9k/templates/base.html
+++ b/nexus9k/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/magic-bootstrap-min.css' %}">
     <link rel="stylesheet" href="{% static 'css/site.css' %}">
+    <link rel="stylesheet" href="{% static 'css/custom-theme.css' %}">
 
   </head>
   <body>
