--- a/nexus9k/templates/script.html
+++ b/nexus9k/templates/script.html
@@ -110,7 +110,7 @@
             <div class="panel panel-default panel-transparent">
               <div class="panel-heading">Recent Activity</div>
               <div class="panel-body">
-                <div class="list-group">
+                <div class="list-group list-group-transparent">
               <span class="list-group-item">
                 <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="40"
                      height="40">
@@ -151,7 +151,7 @@
             <div class="panel panel-default panel-transparent">
               <div class="panel-heading">Recent Activity</div>
               <div class="panel-body">
-                <div class="list-group">
+                <div class="list-group list-group-transparent">
               <span class="list-group-item">
                 <h5 class="list-group-item-heading">
                   <a href="#">mikecohen</a> modified <a href="#">automate_softwate_patch.py</a>:
