--- a/nexus9k/templates/scripts.html
+++ b/nexus9k/templates/scripts.html
@@ -16,7 +16,7 @@
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search Scripts">
                 <span class="input-group-btn">
-                  <select class="btn">
+                  <select class="btn btn-default">
                     <option>All Scripts</option>
                     <option>OS Management</option>
                     <option>Miscellaneous</option>
@@ -265,7 +265,7 @@
         <div class="panel panel-default panel-transparent">
           <div class="panel-heading">Recent Activity</div>
           <div class="panel-body">
-            <div class="list-group">
+            <div class="list-group list-group-transparent">
           <span class="list-group-item">
             <h5 class="list-group-item-heading">
               <a href="#">Lori MacVittie</a> commented on <a href="#">Converting NXOS Standalone</a>:
