--- a/nexus9k/templates/base.html
+++ b/nexus9k/templates/base.html
@@ -30,5 +30,6 @@
 
     <script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.min.js'%}"></script>
     <script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js'%}"></script>
+    <script type="text/javascript" src="{% static 'libs/bootstrap-hover-dropdown.min.js'%}"></script>
   </body>
 </html>
