--- a/nexus9k/templates/modules/header.html
+++ b/nexus9k/templates/modules/header.html
@@ -19,23 +19,52 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Products</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="500" role="button" aria-expanded="false">Products </a>
+          <ul class="dropdown-menu" role="menu">
+            <li role="presentation" class="dropdown-header">Models</li>
+            <li><a href="#">Cisco Nexus 93128TX</a></li>
+            <li><a href="#">Cisco Nexus 93120Tx</a></li>
+            <li><a href="#">Cisco Nexus 9516</a></li>
+            <li><a href="#">Cisco Nexus 93120Tx</a></li>
+            <li><a href="#">Cisco Nexus 9508</a></li>
+            <li><a href="#">Cisco Nexus 9396TX</a></li>
+            <li><a href="#">Cisco Nexus 9332PQ</a></li>
+          </ul>
+        </li>
+
         <li><a href="{% url 'articles' %}">Article Center</a></li>
         <li><a href="{% url 'scripts' %}">Scripts</a></li>
         <li><a href="{% url 'questions' %}">Discussion</a></li>
-        <li><a href="#">Export Corner</a></li>
-        <li><a href="#">Tools</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="500" role="button" aria-expanded="false">Export Corner </a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Leader Board</a></li>
+            <li><a href="#">MVP Program</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="500" role="button" aria-expanded="false">Tools</a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Nexus Configuration Management Toolkit</a></li>
+          </ul>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'login' %}">SignIn</a></li>
+        <li class="dropdown" id="menuLogin">
+          <a class="dropdown-toggle" href="#" data-toggle="dropdown" data-hover="dropdown" data-delay="500" >
+            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+          </a>
+          <div class="dropdown-menu" style="padding:10px;">
+            <form id="global-search">
+              <input type="text" class="form-control input-large" placeholder="Search">
+            </form>
+          </div>
+        </li>
 
+        <li><a href="{% url 'login' %}">Sign In</a></li>
       </ul>
-      {% comment %}<form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control input-sm" placeholder="Search">
-        </div>
 
-      </form>{% endcomment %}
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
