--- a/nexus9k/templates/script.html
+++ b/nexus9k/templates/script.html
@@ -50,40 +50,57 @@
             </div>
             <hr/>
             <div id="comments">
-              <h4>Comments (2)</h4>
+              <h4>Comments (3)</h4>
 
-              <div class="row">
-                <div class="col-xs-12">
-                  <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
-                       class="avatar">
-                  <h4>
-                    <a href="/profile">David Pruitt</a> <span class="points"><i class="fa fa-bolt"></i> 1,200</span> ·
-                    <span class="text-muted">Principal Architect</span>
-                    <small class="pull-right">3rd Nov, 2014</small>
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" data-src="holder.js/64x64" alt="64x64"
+                         src="https://avatars1.githubusercontent.com/u/4196?v=3&amp;s=460"
+                         data-holder-rendered="true" style="width: 50px; height: 50px;">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading" id="media-heading">
+                    <a href="/profile">Adam Randolph</a>
+                    <span class="fa fa-bolt"></span> <strong>82</strong> ·
+                    <span class="text-muted">Network Security</span>
                   </h4>
-
-                  <p>
-                    This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS
-                    standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS
-                    release.
-                  </p>
+                  How to check the existing software patch?
+                  <div class="media">
+                    <div class="media-left">
+                      <a href="#">
+                        <img class="media-object" data-src="holder.js/64x64" alt="64x64"
+                             src="https://devcentral.f5.com/profilepic.ashx?userid=30&amp;w=50&amp;h=50"
+                             data-holder-rendered="true" style="width: 50px; height: 50px;">
+                      </a>
+                    </div>
+                    <div class="media-body">
+                      <h4 class="media-heading" id="nested-media-heading">
+                        <a href="/profile">David Pruitt</a>
+                        <span class="fa fa-bolt"></span> <strong>1200</strong> ·
+                        <span class="text-muted">Principal Architect</span>
+                      </h4>
+                      Please refer the documentation for this.
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-xs-12">
-                  <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
-                       class="avatar">
-                  <h4>
-                    <a href="/profile">David Pruitt</a> <span class="points"><i class="fa fa-bolt"></i> 1,200</span> ·
-                    <span class="text-muted">Principal Architect</span>
-                    <small class="pull-right">3rd Nov, 2014</small>
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" data-src="holder.js/64x64" alt="64x64"
+                         src="https://devcentral.f5.com/profilepic.ashx?userid=137869&amp;w=50&amp;h=50"
+                         data-holder-rendered="true" style="width: 50px; height: 50px;">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading" id="nested-media-heading">
+                    <a href="/profile">Maxim Zavodchik</a>
+                    <span class="fa fa-bolt"></span> <strong>910</strong> ·
+                    <span class="text-muted">Engineer</span>
                   </h4>
-
-                  <p>
-                    This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS
-                    standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS
-                    release.
-                  </p>
+                  What are the supported OS versions?
                 </div>
               </div>
               <hr>
@@ -108,7 +125,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="panel panel-default panel-transparent">
-              <div class="panel-heading">Recent Activity</div>
+              <div class="panel-heading">Top Contributors</div>
               <div class="panel-body">
                 <div class="list-group list-group-transparent">
               <span class="list-group-item">
