--- a/nexus9k/templates/articles.html
+++ b/nexus9k/templates/articles.html
@@ -17,11 +17,14 @@
             </div>
           </div>
         </div>
-        <div class="row col-xs-12">
-          <ul class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="#">Recent</a></li>
-            <li role="presentation"><a href="#">Featured</a></li>
-          </ul>
+        <div class="row">
+          <div class="col-xs-12">
+            <ul class="nav nav-tabs">
+              <li role="presentation" class="active"><a href="#">Recent</a></li>
+              <li role="presentation"><a href="#">Featured</a></li>
+            </ul>
+          </div>
+
         </div>
         <div class="row">
           <div class="col-xs-12">
