--- a/nexus9k/templates/scripts.html
+++ b/nexus9k/templates/scripts.html
@@ -7,14 +7,14 @@
   <div class="container">
   <div class="row">
   <div class="col-md-8">
-  <div class="row">
-    <div class="col-md-6">
-      <h4>Article Center</h4>
-    </div>
-    <div class="col-md-6">
-      <div class="form-group">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Scripts">
+    <div class="row">
+      <div class="col-md-6">
+        <h4>Article Center</h4>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Scripts">
                 <span class="input-group-btn">
                   <select class="btn btn-default">
                     <option>All Scripts</option>
@@ -24,239 +24,161 @@
                     <option>Monitoring</option>
                   </select>
                 </span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="row col-xs-12">
-    <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="#">Recent</a></li>
-      <li role="presentation"><a href="#">Featured</a></li>
-    </ul>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="script-title">
-        <a href="/script">Automate VLAN Creation</a>
-      </h5>
-      This script is to automate Vlan creation.
-      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Config Management</a></div>
-    </div>
-    <div class="col-md-6 text-center">
-      <div class="status-box">
-        <small><strong>5.0(24)</strong></small>
-        <div class="text-muted">
-          <small>user ratings</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>245</strong></small>
-        <div class="text-muted">
-          <small>downloads</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>305</strong></small>
-        <div class="text-muted">
-          <small>views</small>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="script-title">
-        <a href="/script">Fix for FEX issues</a>
-      </h5>
-      This script is to fix FEX issues.
+    <div class="row">
+      <div class="col-xs-12">
+        <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="#">Recent</a></li>
+        <li role="presentation"><a href="#">Featured</a></li>
+      </ul>
+      </div>
 
-      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Troubleshooting</a></div>
     </div>
-    <div class="col-md-6 text-center">
-      <div class="status-box">
-        <small><strong>5.0(24)</strong></small>
-        <div class="text-muted">
-          <small>user ratings</small>
-        </div>
+    <div class="row">
+      <div class="col-xs-7">
+        <h5 class="script-title">
+          <a href="/script">Automate VLAN Creation</a>
+        </h5>
+        This script is to automate Vlan creation.
+        <div class="meta"><span class="text-muted">Category: </span> <a href="#">Config Management</a></div>
       </div>
-      <div class="status-box">
-        <small><strong>245</strong></small>
-        <div class="text-muted">
-          <small>downloads</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>305</strong></small>
-        <div class="text-muted">
-          <small>views</small>
+      <div class="col-xs-5 text-center">
+        <div class="row">
+          <div class="col-xs-4 status-box">
+            <small><strong>245</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>305</strong></small>
+            <div class="text-muted">
+              <small>views</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>5.0(24)</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="script-title">
-        <a href="/script">Add/Remove Software Patches</a>
-      </h5>
-      This script is to Add/Remove Software Patches.
+    <div class="row">
+      <div class="col-xs-7">
+        <h5 class="script-title">
+          <a href="/script">Fix for FEX issues</a>
+        </h5>
+        This script is to fix FEX issues.
 
-      <div class="meta"><span class="text-muted">Category: </span> <a href="#">OS Management</a></div>
+        <div class="meta"><span class="text-muted">Category: </span> <a href="#">Troubleshooting</a></div>
+      </div>
+      <div class="col-xs-5 text-center">
+        <div class="row">
+          <div class="col-xs-4 status-box">
+            <small><strong>245</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>305</strong></small>
+            <div class="text-muted">
+              <small>views</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>5.0(24)</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-md-6 text-center">
-      <div class="status-box">
-        <small><strong>5.0(24)</strong></small>
-        <div class="text-muted">
-          <small>user ratings</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>245</strong></small>
-        <div class="text-muted">
-          <small>downloads</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>305</strong></small>
-        <div class="text-muted">
-          <small>views</small>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="script-title">
-        <a href="/script">Critical Syslog Monitoring</a>
-      </h5>
-      This script to monitor Critical Syslog Errors.
-      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
-    </div>
-    <div class="col-md-6 text-center">
-      <div class="status-box">
-        <small><strong>5.0(24)</strong></small>
-        <div class="text-muted">
-          <small>user ratings</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>245</strong></small>
-        <div class="text-muted">
-          <small>downloads</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>305</strong></small>
-        <div class="text-muted">
-          <small>views</small>
-        </div>
-      </div>
-    </div>
-  </div>
+    <div class="row">
+      <div class="col-xs-7">
+        <h5 class="script-title">
+          <a href="/script">Add/Remove Software Patches</a>
+        </h5>
+        This script is to Add/Remove Software Patches.
 
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="script-title">
-        <a href="/script">Critical Syslog Monitoring</a>
-      </h5>
-      This script to monitor Critical Syslog Errors.
-      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
-    </div>
-    <div class="col-md-6 text-center">
-      <div class="status-box">
-        <small><strong>5.0(24)</strong></small>
-        <div class="text-muted">
-          <small>user ratings</small>
-        </div>
+        <div class="meta"><span class="text-muted">Category: </span> <a href="#">OS Management</a></div>
       </div>
-      <div class="status-box">
-        <small><strong>245</strong></small>
-        <div class="text-muted">
-          <small>downloads</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>305</strong></small>
-        <div class="text-muted">
-          <small>views</small>
+      <div class="col-xs-5 text-center">
+        <div class="row">
+          <div class="col-xs-4 status-box">
+            <small><strong>245</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>305</strong></small>
+            <div class="text-muted">
+              <small>views</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>5.0(24)</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="script-title">
-        <a href="/script">Critical Syslog Monitoring</a>
-      </h5>
-      This script to monitor Critical Syslog Errors.
-      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
+    <div class="row">
+      <div class="col-xs-7">
+        <h5 class="script-title">
+          <a href="/script">Critical Syslog Monitoring</a>
+        </h5>
+        This script to monitor Critical Syslog Errors.
+        <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
+      </div>
+      <div class="col-xs-5 text-center">
+        <div class="row">
+          <div class="col-xs-4 status-box">
+            <small><strong>245</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>305</strong></small>
+            <div class="text-muted">
+              <small>views</small>
+            </div>
+          </div>
+          <div class="col-xs-4 status-box">
+            <small><strong>5.0(24)</strong></small>
+            <div class="text-muted">
+              <small>user ratings</small>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-md-6 text-center">
-      <div class="status-box">
-        <small><strong>5.0(24)</strong></small>
-        <div class="text-muted">
-          <small>user ratings</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>245</strong></small>
-        <div class="text-muted">
-          <small>downloads</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>305</strong></small>
-        <div class="text-muted">
-          <small>views</small>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="script-title">
-        <a href="/script">Critical Syslog Monitoring</a>
-      </h5>
-      This script to monitor Critical Syslog Errors.
-      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
-    </div>
-    <div class="col-md-6 text-center">
-      <div class="status-box">
-        <small><strong>5.0(24)</strong></small>
-        <div class="text-muted">
-          <small>user ratings</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>245</strong></small>
-        <div class="text-muted">
-          <small>downloads</small>
-        </div>
-      </div>
-      <div class="status-box">
-        <small><strong>305</strong></small>
-        <div class="text-muted">
-          <small>views</small>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <nav>
-    <ul class="pagination">
-      <li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
-      <li><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="#">3</a></li>
-      <li><a href="#">4</a></li>
-      <li><a href="#">5</a></li>
-      <li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
-    </ul>
-  </nav>
+    <nav>
+      <ul class="pagination">
+        <li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+      </ul>
+    </nav>
   </div>
 
   <div class="col-md-4">
