working on leaderboard

--- a/nexus9k/templates/modules/header.html
+++ b/nexus9k/templates/modules/header.html
@@ -23,13 +23,13 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="500" role="button" aria-expanded="false">Products </a>
           <ul class="dropdown-menu" role="menu">
             <li role="presentation" class="dropdown-header">Models</li>
-            <li><a href="#">Cisco Nexus 93128TX</a></li>
-            <li><a href="#">Cisco Nexus 93120Tx</a></li>
-            <li><a href="#">Cisco Nexus 9516</a></li>
-            <li><a href="#">Cisco Nexus 93120Tx</a></li>
-            <li><a href="#">Cisco Nexus 9508</a></li>
-            <li><a href="#">Cisco Nexus 9396TX</a></li>
-            <li><a href="#">Cisco Nexus 9332PQ</a></li>
+            <li><a href="{% url 'product' %}">Cisco Nexus 93128TX</a></li>
+            <li><a href="{% url 'product' %}">Cisco Nexus 93120Tx</a></li>
+            <li><a href="{% url 'product' %}">Cisco Nexus 9516</a></li>
+            <li><a href="{% url 'product' %}">Cisco Nexus 93120Tx</a></li>
+            <li><a href="{% url 'product' %}">Cisco Nexus 9508</a></li>
+            <li><a href="{% url 'product' %}">Cisco Nexus 9396TX</a></li>
+            <li><a href="{% url 'product' %}">Cisco Nexus 9332PQ</a></li>
           </ul>
         </li>
 
@@ -39,14 +39,14 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="500" role="button" aria-expanded="false">Export Corner </a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Leader Board</a></li>
+            <li><a href="{% url 'leaderboard' %}">Leaderboard</a></li>
             <li><a href="#">MVP Program</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="500" role="button" aria-expanded="false">Tools</a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Nexus Configuration Management Toolkit</a></li>
+            <li><a href="http://1-cloud.net/tools-nexus9000-convert/">Nexus Configuration Management Toolkit</a></li>
           </ul>
         </li>
       </ul>
