--- a/nexus9k/static/css/site.css
+++ b/nexus9k/static/css/site.css
@@ -11,10 +11,6 @@
 .navbar-nexus #global-search{width:300px;}
 }
 
-
-
-
-
 /*Main Footer*/
 .footer {
   bottom: 0;
@@ -28,7 +24,6 @@ footer.footer ul li a{padding-top:5px;padding-bottom: 5px;}
 
 
 /*hom Page*/
-
 .jumbotron-nex{
     margin-top:-20px;
     background: url('../img/earth.jpg');
@@ -40,6 +35,9 @@ footer.footer ul li a{padding-top:5px;padding-bottom: 5px;}
 .transparent{
   background-color: transparent;
 }
+
+hr{margin-top:10px;margin-bottom: 10px;}
+
 .bkg-white{background-color: #fff;}
 .bkg-grey{background-color: #F4F4F4}
 
@@ -47,6 +45,15 @@ footer.footer ul li a{padding-top:5px;padding-bottom: 5px;}
   border:none;box-shadow: none;
 }
 .panel-nex .bkg-white{background-color: #fff;}
+
+/*bread crums*/
+.breadcrumb.bdc-nexus > li + li::before {
+  color: #ccc;
+  content: "> ";
+  padding: 0;
+}
+.breadcrumb.bdc-nexus{margin-bottom: 0px;}
+
 
 .status-box{
     margin: 10px;
